[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTextBox" type="LineEdit" parent="."]
margin_left = 44.0
margin_top = 54.0
margin_right = 342.0
margin_bottom = 89.0
text = "Shirious"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateGameButton" type="Button" parent="."]
margin_left = 784.0
margin_top = 504.0
margin_right = 1002.0
margin_bottom = 586.0
text = "Create Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinGameButton" type="Button" parent="."]
margin_left = 783.0
margin_top = 411.0
margin_right = 1001.0
margin_bottom = 493.0
text = "Join Game"

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 44.0
margin_top = 98.0
margin_right = 342.0
margin_bottom = 129.0
text = "Kindler"
items = [ "Kindler", null, false, 0, null, "Invisible Guy", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="NameTextBox" to="." method="_on_NameTextBox_text_entered"]
[connection signal="pressed" from="CreateGameButton" to="." method="_on_CreateGameButton_pressed"]
[connection signal="pressed" from="JoinGameButton" to="." method="_on_JoinGameButton_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
